# humetric-orchestrator

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/humetric_orchestrator/: __init__.py  backend.py  errors.py  feed.py  history.py  parse.py
tests/: conftest.py  test_fake_backend.py  test_history.py  test_parse_explanations.py  test_prompt_grounding.py
