[project]
name = "humetric-orchestrator"
version = "0.1.0"
description = "LLM-facing layer: query parsing, history, explained-feed generation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Po-Hsuan Lai" }]
dependencies = [
    "humetric-core>=0.1,<0.2",
    "humetric-retrieval>=0.1,<0.2",
    "humetric-ranking>=0.1,<0.2",
    "humetric-embed>=0.1,<0.2",
    "anthropic>=0.39,<1",
    "openai>=1.40,<2",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "ty>=0.0.35",
]

[tool.uv.sources]
humetric-core = { path = "../humetric-core", editable = true }
humetric-retrieval = { path = "../humetric-retrieval", editable = true }
humetric-ranking = { path = "../humetric-ranking", editable = true }
humetric-embed = { path = "../humetric-embed", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humetric_orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF", "SIM", "TID"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
